@@ -1,3 +1,5 @@
+* Fix incorrect usage of Fuse.String#unfilterJSON in Fuse.Ajax.Request#evalResponse and optimize Fuse.String#unfilterJSON and Fuse.String#isJSON. [jddalton, Samuel Lebeau]
+
 * Fix IE6 try-catch-finally bug in Fuse.Timer class and unit tests. [Prototype LH #696] [jddalton, xucia, Yaffle]
 
 * Changed the argument order in Form.TimedObserver and Field.TimedObserver to `element, callback, interval, options` for a more consistent API. [jddalton]
